# camera_calibration

./: CMakeLists.txt  README.md  calibration.txt  init_parameter.txt  main.cpp
pict/: ost.txt  ost.yaml
